# dsync

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-linux.yml
scripts/: build-linux.sh  build-macos.sh
specs/: README.md  architecture.md  cli.md  config.md  delta-algorithm.md  ignore.md  progress-ui.md  sync-engine.md  testing-and-build.md  transport.md
src/: cli.rs  config.rs  delta.rs  error.rs  ignore.rs  lib.rs  main.rs  progress.rs  server.rs
src/sync/: mod.rs  plan.rs  scan.rs  transfer.rs
src/transport/: local.rs  mod.rs  protocol.rs  ssh.rs  ssh_config.rs
tests/: agent.rs  roundtrip.rs
